maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:36: error: illegal start of simple expression
  var n=litMessage().toInt
  ^ShortestPathMaze:38: error: ')' expected but '}' found.
} 
^